# finger-tracker

./: .gitignore  README.md  main.py
flock/: Cargo.toml
flock/src/: lib.rs  main.rs
tracker/: main.py
