[package]
name = "flock"
version = "1.0.0"
authors = ["haleywm <haleywrkmn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc1"
glam = "0.12.0"
getrandom = "0.2.2"
oorandom = "11.1.3"
structopt = "0.3.21"
scan_fmt = "0.2.6"
